--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cherry-markdown@0.8.26/dist/cherry-markdown.min.css">
-  <link rel="stylesheet" href="https://cdn.staticfile.org/layui/2.6.8/css/layui.min.css">
+  
+  <link rel="stylesheet" href="css/layui.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css">
 </head>
 
@@ -52,7 +53,7 @@
       <div class="layui-form-item">
         <label class="layui-form-label" for="levelValue">难易程度</label>
         <div class="layui-input-block">
-          <input type="number" id="levelValue" name="level" lay-verify="required" hidden>
+          <input type="number" id="levelValue" name="level"   lay-verify="required" hidden>
           <div id="level"></div>
         </div>
       </div>
@@ -113,10 +114,11 @@
     }
   </script>
   <script>
-    var $ = layui.$;
-    layui.use(['form', 'rate'], function () {
-      var form = layui.form;
-      var rate = layui.rate;
+    var $ = layui.$
+    layui.use(['form', 'rate'],function () {
+      window.$=layui.$
+      window.form=layui.form
+      window.rate=layui.rate
       //渲染
       var ins1 = rate.render({
         elem: '#level'  //绑定元素
@@ -162,7 +164,10 @@
         // 使用 ajax 或其他方式发送 POST 请求
         return data.field.keepForm != 1
       });
-      $.get({
+      
+    });
+    
+    $.get({
         url: 'http://localhost:8088/questionType',
         success: function (data) {
           if (data.code == 200) {
@@ -173,12 +178,11 @@
               option.setAttribute("value", ids[i].id);
               option.innerText = ids[i].name;
               $("#mathItemType").append(option)
-              form.render('select')
+              layui.form.render('select')
             }
           };
         }
       })
-    });
 
   </script>
 </body>
